--- a/public/readme.html
+++ b/public/readme.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <h1>README</h1>
-<p><b>Student 1:</b> Menachem Engel, menachemengel26@gmail.com</p>
-<p><b>Student 2:</b> Elchanan Madmon, elchananm10@gmail.com</p>
+<p><b>Student:</b> Menachem Engel, menachemengel26@gmail.com</p>
 <ol>
     <li><h2>Description of ajax calls</h2>
         <ul style="list-style-type:disc;">
